tests/regression/500_INTEGRATION_TESTING/510_NEGATIVE_TESTS/510_002_unclosed_branch_brace/expected.txt
error[PARSE004]: unmatched '{' in branch payload shape
  --> tests/regression/500_INTEGRATION_TESTING/510_NEGATIVE_TESTS/510_002_unclosed_branch_brace/input.kz:5:8
    |
  5 | | success {
    |        ^

